--- a/1/EomTool/EomToolWeb/Views/Analysts/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Analysts/Index.cshtml
@@ -31,3 +31,6 @@ Accounting Period:
 </table>
 @Html.ActionLink("New Analyst", "NewAnalyst")
 <br /><br />
+List:
+@Html.ActionLink("AnalystManagers", "Managers", "Analysts") |
+@Html.ActionLink("Strategists", "Strategists", "People")
