--- a/1/EomTool/EomToolWeb/Views/CampAffs/Affiliates.cshtml
+++ b/1/EomTool/EomToolWeb/Views/CampAffs/Affiliates.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<Affiliate>
 
-<h3>Publishers with activity</h3>
+<h3>@Html.ActionLink("EOM Admin", "Index", "Admin") - Publishers with activity</h3>
 
 Accounting Period:
 @Html.Partial("ChooseMonth", (SelectList)ViewBag.ChooseMonthSelectList)
 <br />
 
+* = analyst(s) previously assigned
+<br /><br />
+
 <b>Select Publisher:</b><br />
 @foreach (var aff in Model)
 {
+    if (aff.AnalystRolesAssigned)
+    {
+        <text>*</text>
+    }
     @Html.ActionLink(aff.name2, "ShowRoles", new { affid = aff.affid })<br />
 }
-
