--- a/1/EomTool/EomToolWeb/Views/People/Strategists.cshtml
+++ b/1/EomTool/EomToolWeb/Views/People/Strategists.cshtml
@@ -29,3 +29,6 @@ Accounting Period:
 </table>
 @Html.ActionLink("New Strategist", "NewStrategist")
 <br /><br />
+List:
+@Html.ActionLink("Analysts", "Index", "Analysts") |
+@Html.ActionLink("AnalystManagers", "Managers", "Analysts")
