--- a/1/EomTool/EomToolWeb/Views/Invoices/Start.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Start.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    IQueryable<AccountManagerTeam> AMs = ViewBag.AMs;
+    IQueryable<AccountManager> AMs = ViewBag.AMs;
     bool includeAMall = ViewBag.IncludeAMall ?? false;
 }
 <h2>Invoice Requests</h2>
