--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
@@ -58,6 +58,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu1 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="@Url.Action("Index", "SearchProfiles")">SearchProfiles</a></li>
+                            <li><a href="@Url.Action("IndexGauge", "SearchAccounts")">StatsGauge</a></li>
                         </ul>
                     </li>
                 </ul>
