td.Account.FilterOut (prep)

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
@@ -34,6 +34,10 @@
                     <td>@Html.LabelFor(m => m.Filter)</td>
                     <td>@Html.EditorFor(m => m.Filter)</td>
                 </tr>
+                @*<tr>
+                    <td>@Html.LabelFor(m => m.FilterOut)</td>
+                    <td>@Html.EditorFor(m => m.FilterOut)</td>
+                </tr>*@
                 <tr>
                     <td>@Html.LabelFor(m => m.Network)</td>
                     <td>@Html.DropDownListFor(m => m.NetworkId, networkSelectList, "(all)")</td>
