--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
@@ -49,16 +49,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "SearchAccounts")">Test</a>
+                @*<a class="navbar-brand" href="@Url.Action("Index", "SearchAccounts")">Test</a>*@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @*            <li><a href="@Url.Action("Pacing", "Campaigns", new { showPerfStats = true })">Performance</a></li>*@
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu1 <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="@Url.Action("Index", "SearchProfiles")">SearchProfiles</a></li>
-                            <li><a href="@Url.Action("IndexGauge", "SearchAccounts")">StatsGauge</a></li>
+                            <li><a href="@Url.Action("Index", "SearchAccounts")">SearchAccounts</a></li>
+                            <li><a href="@Url.Action("IndexGauge", "SearchAccounts")">StatsGauge - all</a></li>
                         </ul>
                     </li>
                 </ul>
