--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Shared/_LayoutSearch.cshtml
@@ -59,7 +59,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="@Url.Action("Index", "SearchProfiles")">SearchProfiles</a></li>
                             <li><a href="@Url.Action("Index", "SearchAccounts")">SearchAccounts</a></li>
-                            <li><a href="@Url.Action("IndexGauge", "SearchAccounts")">StatsGauge - all</a></li>
+                            <li><a href="@Url.Action("Index", "StatsGauges")">StatsGauge</a></li>
                         </ul>
                     </li>
                 </ul>
