--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.CPSearch.SearchAccount>
 
-<h2>StatsGauge by Channel</h2>
+<h2>StatsGauge - Channels</h2>
 
 <table>
     <tr>
@@ -9,10 +9,10 @@
         <th style="text-align:center">ConvSums</th>
         <th style="text-align:center">CallSums</th>
     </tr>
-    @foreach (var sa in Model)
+    @foreach (var sa in Model.OrderBy(x => x.Channel != "Google").ThenBy(x => x.Channel))
     {
         <tr>
-            <td>@sa.Channel</td>
+            <td>@Html.ActionLink(sa.Channel, "IndexGauge", "SearchAccounts", new { channel = sa.Channel.ToLower() }, null)</td>
             <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
             <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
             <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
