--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
@@ -72,6 +72,7 @@ else if (oneProfile)
             <td><input type="text" id="sync_to" name="to" value="@default_to.ToShortDateString()" /></td>
         </tr>
     </table>
+    <text>(Not currently available for Criteo)</text>
     <br />
     <div id="divSyncButton">
         <input type="submit" value="Sync" onclick="DoSync()" />
