upload adset stats (all done except colmapping db updates)

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/UploadStats.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/UploadStats.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DirectAgents.Domain.Entities.CPProg.ExtAccount
 @{
-    var statsTypeList = new[] { "Daily", "Strategy", "Creative", "Site", "Conv", "DailyAndStrategy" };
+    var statsTypeList = new[] { "Daily", "Strategy", "AdSet", "Creative", "Site", "Conv", "DailyAndStrategy" };
     var url = Url.Action("UploadFile", new { id = Model.Id });
 }
 <h2>Upload Stats for External Account</h2>
