SearchProfiles/IndexGauge ProgAdmin/Maintenance misc

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
@@ -20,4 +20,6 @@
     }
 </table>
 <br />
+@Html.ActionLink("By SearchProfile", "IndexGauge", "SearchProfiles")
+<br />
 @Html.ActionLink("By SearchAccount", "IndexGauge", "SearchAccounts")
