--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -108,7 +108,7 @@ if (pGauge.Children != null)
 else if (super) //CampaignId specified
 {
     var extAccts = Model.ExtAccounts(syncableOnly: true);
-    var extAcctSelectList = new SelectList(extAccts, "Id", "DisplayName1");
+    var extAcctSelectList = Model.ExtAccountSelectListItems(syncableOnly: true, includePlatforms: true);
     var statsTypeList = new[] { "Daily", "Strategy", "AdSet+Actions (Adform/FB only)" };
     DateTime default_to = DateTime.Today.AddDays(-1);
     DateTime default_from = (default_to.Day == 1 ? default_to.AddMonths(-1) : new DateTime(default_to.Year, default_to.Month, 1));
@@ -117,6 +117,7 @@ else if (super) //CampaignId specified
     using (Html.BeginForm("StatsGaugeSyncClear", "ExtAccounts", FormMethod.Post, new { id = "formSync" }))
     {
         @Html.ValidationSummary()
+        @Html.Hidden("campId", Model.CampaignId.Value)
         <table>
             <tr>
                 <td>@Html.Label("", "ExtAccount:")</td>
