--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -72,7 +72,7 @@ if (!Model.CampaignId.HasValue) // don't show Partner summaries if filtering by 
 }
 if (pGauge.Children != null)
 {
-    foreach (var gauge in pGauge.Children.OrderBy(s => s.ExtAccount.Name))
+    foreach (var gauge in pGauge.Children.OrderBy(s => s.ExtAccount.Name).ThenBy(s => s.ExtAccount.Id))
     {
     <tr>
         <td>@gauge.ExtAccount.Platform.Name</td>
