--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -13,10 +13,9 @@ Accounting Period:
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
 @Html.ActionLink("Income Types", "Index", "IncomeTypes")<br />
 @Html.ActionLink("Unit Types", "Index", "UnitTypes")<br />
-OLD- @Html.ActionLink("Assign Analysts", "Affiliates", "AnalystRoles")<br />
-NEW- @Html.ActionLink("Assign Roles by Publisher/Campaign", "Affiliates", "CampAffs")<br />
-@Html.ActionLink("People", "Index", "People") -
-@Html.ActionLink("Analysts", "Index", "Analysts"), @Html.ActionLink("AnalystManagers", "Managers", "Analysts"), @Html.ActionLink("Strategists", "Strategists", "People")<br />
+<br />
+@Html.ActionLink("Assign Roles by Publisher/Campaign", "Affiliates", "CampAffs")<br />
+List: @Html.ActionLink("Analysts", "Index", "Analysts"), @Html.ActionLink("AnalystManagers", "Managers", "Analysts"), @Html.ActionLink("Strategists", "Strategists", "People")<br />
 <br />
 @Html.ActionLink("Accounting Sheet", "AccountingSheet", "Admin")<br />
 @Html.ActionLink("Affiliate Amounts", "AffiliateAmounts", "Workflow")<br />
