Criteo- sync via web

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -161,6 +161,9 @@ else if (super) //CampaignId specified
         </div>
         <div id="divSyncMessage"></div>
     }
+    <br />
+    <i>Note: for Amazon and Criteo, sync strategy stats before daily stats</i>
+
     <script>
         $(function () {
             $('#sync_from').kendoDatePicker({ footer: ' ' });
